--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -15,7 +15,7 @@
     "**1st part**\\\n",
     "We will look at data from two radars:\n",
     "- BASTA is a vertically-pointing W-band (94 GHz) radar, measuring time series of radar reflectivity and mean Doppler velocity\n",
-    "- MXPol is a scanning X-band (9.4 GHz) radar. From its measurements, we extract vertical profiles of radar reflectivity. ( TO DO DO WE WANT TO ADD SOMETHING ABOUT SPECTRA ??)\n",
+    "- MXPol is a scanning X-band (9.4 GHz) radar. From its measurements, we extract vertical profiles of radar reflectivity. **( TO DO - DO WE WANT TO ADD SOMETHING ABOUT SPECTRA ??)**\n",
     "\n",
     "We also examine radiosonde data, from a sounding launched at Davis station at 12UTC on January 8.\n",
     "\n",
@@ -674,7 +674,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acbr",
+   "display_name": "Python3",
    "language": "python",
    "name": "python3"
   },
@@ -688,9 +688,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
