Updates to make work on noto

--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -32,7 +32,7 @@
     "You will need to install some Python libraries for executing the code in this exercise.\n",
     "A notebook has been created for the installation, and it is available at:\n",
     "\n",
-    "TO DO CREATE LINK\n",
+    "https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2024&urlpath=lab%2Ftree%2FAtmProc2024%2Finstall_python_environment.ipynb%3Fautodecode&branch=main&depth=1\n",
     "\n",
     "Access it and execute the code in it. When you finish the installation, come back to this notebook for completing the exercise."
    ]
@@ -47,11 +47,11 @@
     "You will need to activate this kernel for the current exercise for loading the libraries correctly.\n",
     "\n",
     "Click on the \"Switch kernel\" button in the right hand corner of the screen. It is the small text on the left of the circle (\"kernel status\" indicator) and on the right of the bug icon (\"Debugger\" icon).\n",
-    "Once you click on it, a drop-down menu will appear and you will be able to select the kernel we created, called \"Radar ex\".\n",
-    "Select \"Radar ex\" in the list and click on the \"Select\" button.\n",
+    "Once you click on it, a drop-down menu will appear and you will be able to select the kernel we created, called \"AtmProc_Ex2\".\n",
+    "Select \"AtmProc_Ex2\" in the list and click on the \"Select\" button.\n",
     "\n",
-    "If the \"Radar ex\" kernel does not appear in the drop-down menu, interrupt the current kernel (square button in the bar at the top of this tab) and restart it (circular arrow, on the right of the square button).\n",
-    "Then, repeat the procedure to select the \"Radar ex\" kernel, and it should appear in the list."
+    "If the \"AtmProc_Ex2\" kernel does not appear in the drop-down menu, interrupt the current kernel (square button in the bar at the top of this tab) and restart it (circular arrow, on the right of the square button).\n",
+    "Then, repeat the procedure to select the \"AtmProc_Ex2\" kernel, and it should appear in the list."
    ]
   },
   {
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from netCDF4 import Dataset\n",
@@ -96,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# In this cell, we load the radar data\n",
     "nc_basta = Dataset('Data/BASTA_L2_merged_20190108.nc')\n",
     "t_basta = nc_basta.variables['time']\n",
     "dt = [datetime.datetime(2019,1,8)+datetime.timedelta(seconds=int(tt)) for tt in nc_basta.variables['time'][:]]\n",
@@ -123,7 +126,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plt.rcParams['font.size']=14\n",
@@ -172,11 +177,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "# In this cell, we load the radiosounding data\n",
     "headers = ['Altitude A.G.L (m)', 'Pressure (Pa)', 'Temperature (K)', 'Specific humidity (kg/kg)', 'RH w.r.t liq (%)', 'RH w.r.t ice (%)', 'Wind speed (m/s)', 'Wind direction (deg)']\n",
-    "RS = pd.read_csv('Davis_RS_20190108_12.txt',sep='\\t',names = headers )\n",
+    "RS = pd.read_csv('Data/Davis_RS_20190108_12.txt',sep='\\t',names = headers )\n",
     "wind_dir = RS['Wind direction (deg)']\n",
     "wind_dir[wind_dir>300]=wind_dir-360"
    ]
@@ -184,7 +192,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "fig,axs=plt.subplots(1,4,figsize=(18,7),sharey=True)\n",
@@ -263,7 +273,7 @@
     "\n",
     "The next steps of the exercise investigate this hypothesis, by relying on the outputs of a high-resolution numerical model (Weather Research Forecast, WRF) which was run on this event.\n",
     "\n",
-    "**Upload the data**: The data could not be shared through Noto, so you have to upload it yourself. Download it from the following link: \n",
+    "**Upload the data**: The data could not be shared through Noto, so you have to upload it yourself. Download it from the following link: https://enacshare.epfl.ch/for5XVEUYejSiALZ7xt3vzaJ4cTRwQd\n",
     "Then upload it to the AtmProc2024/Exercise_2/Data/ directory on your Noto space (drag and drop)."
    ]
   },
@@ -674,9 +684,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3",
+   "display_name": "AtmProc_Ex2",
    "language": "python",
-   "name": "python3"
+   "name": "atm_proc_ex2"
   },
   "language_info": {
    "codemirror_mode": {
