--- a/export_noto_link.ipynb
+++ b/export_noto_link.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "013d04c7-c17c-4e01-8b06-8fa91adac069",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-02T07:57:14.898519Z",
+     "iopub.status.busy": "2024-08-02T07:57:14.897648Z",
+     "iopub.status.idle": "2024-08-02T07:57:14.908905Z",
+     "shell.execute_reply": "2024-08-02T07:57:14.906635Z",
+     "shell.execute_reply.started": "2024-08-02T07:57:14.898446Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -14,9 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "d1bac7e1-d7fb-4cec-b4b1-c6a5eb3f24c4",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-02T07:57:15.050944Z",
+     "iopub.status.busy": "2024-08-02T07:57:15.050122Z",
+     "iopub.status.idle": "2024-08-02T07:57:15.061834Z",
+     "shell.execute_reply": "2024-08-02T07:57:15.059661Z",
+     "shell.execute_reply.started": "2024-08-02T07:57:15.050871Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -29,9 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6e9acdc1-e51f-4328-9157-25915818f937",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-02T07:57:15.890411Z",
+     "iopub.status.busy": "2024-08-02T07:57:15.889485Z",
+     "iopub.status.idle": "2024-08-02T07:57:15.905035Z",
+     "shell.execute_reply": "2024-08-02T07:57:15.902852Z",
+     "shell.execute_reply.started": "2024-08-02T07:57:15.890334Z"
+    },
     "tags": []
    },
    "outputs": [],
@@ -56,9 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "b56f5e85-59ae-401e-a679-add2160a62d1",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-02T07:57:16.430488Z",
+     "iopub.status.busy": "2024-08-02T07:57:16.429591Z",
+     "iopub.status.idle": "2024-08-02T07:57:16.441993Z",
+     "shell.execute_reply": "2024-08-02T07:57:16.439618Z",
+     "shell.execute_reply.started": "2024-08-02T07:57:16.430408Z"
+    },
     "tags": []
    },
    "outputs": [
@@ -66,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Exercise': 'https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2023&urlpath=lab%2Ftree%2FAtmProc2023%2FExercise_radar%2FExercise_radar.ipynb%3Fautodecode&branch=main&depth=1', 'Installing_libraries': 'https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2023&urlpath=lab%2Ftree%2FAtmProc2023%2Finstall_python_environment.ipynb%3Fautodecode&branch=main&depth=1'}\n"
+      "{'Exercise': 'https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2024&urlpath=lab%2Ftree%2FAtmProc2024%2FExercise_2%2FExercise_2.ipynb%3Fautodecode&branch=main&depth=1', 'Installing_libraries': 'https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2024&urlpath=lab%2Ftree%2FAtmProc2024%2Finstall_python_environment.ipynb%3Fautodecode&branch=main&depth=1'}\n"
      ]
     }
    ],
