Modified nb to install python environment considering problem with wrf-python and need for pyart

--- a/install_python_environment.ipynb
+++ b/install_python_environment.ipynb
@@ -53,10 +53,12 @@
    "source": [
     "# List of libraries that we are installing:\n",
     "# - NetCDF allows us to read the radar data, which are stored in netCDF format\n",
-    "# - WRF-python is a library for reading and processing simulations from the Weather Research Forecasting (WRF) model\n",
+    "# - WRF-python is a library for reading and processing simulations from the Weather Research Forecasting (WRF) model \n",
+    "# WARNING For now removed this package (wrf-python) because does not install with python 3.12 - this is an issue for Ex2 part II !!\n",
     "# - Metpy helps us in reading, visualizing and performing simple analyses with weather data\n",
     "# - ipykernel is required for the jupyter notebooks to run.\n",
-    "pip install netCDF4 wrf-python metpy ipykernel"
+    "# - arm_pyart is a library to process and plot radar data\n",
+    "pip install netCDF4 metpy ipykernel arm_pyart"
    ]
   },
   {
