Minor modif to Ex. 2

--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -509,7 +509,7 @@
     "\n",
     "# 3 - In the next cell we propose to plot a **vertical** cross-section of meteorological fields. Here you can define the direction of the cross-section (passing through Davis research station) by setting the ANGLE value.\n",
     "PLOT_CROSS_SECT_LINE = False\n",
-    "ANGLE = 0\n",
+    "ANGLE = 50\n",
     "\n",
     "# 4 - Define whether to display the cumulated precipitation (for question 13).\n",
     "PCUM_CONTOURS = False\n",
@@ -632,10 +632,10 @@
    "outputs": [],
    "source": [
     "WIND_BARBS = False\n",
-    "W_WIND = False # Vertical wind\n",
+    "W_WIND = True # Vertical wind\n",
     "POTENTIAL_TEMPERATURE = False\n",
     "RH_I = False # Relative humidity with respect to ice\n",
-    "TURB_DISS = False\n",
+    "TURB_DISS = True\n",
     "\n",
     "###########################################################\n",
     "\n",
@@ -772,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
