--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -175,28 +175,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question 1**: Recall the physical meaning of radar reflectivity (Ze) and mean Doppler velocity (MDV). What are the radar targets here? What information do Ze and MDV respectively convey?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Question 2**: When is precipitation observed at the ground? Given the radar data (and the geographical location), what type(s) of precipitation is (are) observed?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Question 3**: What type(s) of cloud is (are) present in these timeseries?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Question 4**: What do you observe in the radar timeseries at low levels (below ~1km, especially before 15UTC)? What microphysical process(es) is happening?\n"
+    "> **Question 1**: Recall the physical meaning of radar reflectivity (Ze) and mean Doppler velocity (MDV). What are the radar targets here? What information do Ze and MDV respectively convey?\n",
+    "\n",
+    "> **Question 2**: When is precipitation observed at the ground? Given the radar data (and the geographical location), what type(s) of precipitation is (are) observed?\n",
+    "\n",
+    "> **Question 3**: What type(s) of cloud is (are) present in these timeseries?\n",
+    "\n",
+    "> **Question 4**: What do you observe in the radar timeseries at low levels (below ~1km, especially before 15UTC)? What microphysical process(es) is happening?"
    ]
   },
   {
@@ -509,7 +494,7 @@
     "\n",
     "# 3 - In the next cell we propose to plot a **vertical** cross-section of meteorological fields. Here you can define the direction of the cross-section (passing through Davis research station) by setting the ANGLE value.\n",
     "PLOT_CROSS_SECT_LINE = False\n",
-    "ANGLE = 50\n",
+    "ANGLE = 0\n",
     "\n",
     "# 4 - Define whether to display the cumulated precipitation (for question 13).\n",
     "PCUM_CONTOURS = False\n",
@@ -632,10 +617,10 @@
    "outputs": [],
    "source": [
     "WIND_BARBS = False\n",
-    "W_WIND = True # Vertical wind\n",
+    "W_WIND = False # Vertical wind\n",
     "POTENTIAL_TEMPERATURE = False\n",
     "RH_I = False # Relative humidity with respect to ice\n",
-    "TURB_DISS = True\n",
+    "TURB_DISS = False\n",
     "\n",
     "###########################################################\n",
     "\n",
@@ -772,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
