--- a/Exercise_4/Exercise_4.ipynb
+++ b/Exercise_4/Exercise_4.ipynb
@@ -9,12 +9,14 @@
     "\n",
     "## Introduction \n",
     "\n",
-    "In this exercise, you will analyze numerical model simulations and observational data corresponding to snowfall events at Jungfraujoch in January 2014. "
+    "In this exercise, you will analyze numerical model simulations and observational data corresponding to snowfall events at Jungfraujoch in January 2014. \n",
+    "\n",
+    "The data should be downloaded from https://enacshare.epfl.ch/fag54z9PZXwAQ3eRSYkbvutMprdmsTL , unzipped and the \"Data\" folder should be dragged into your \"Exercise_4\" repository."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +31,8 @@
     "myFmt = mdates.DateFormatter('%d/%m')\n",
     "plt.rcParams['font.size']=14\n",
     "import wrf\n",
-    "\n"
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n"
    ]
   },
   {
@@ -413,6 +416,7 @@
     "axs[2].plot(pd.to_datetime(lwc_obs_nw['Datetime(dd/mm/yyyy h:mm)']), lwc_obs_nw['LWC(gm-3)'], linestyle='', marker='o', markersize=8, color='red', markeredgecolor='k',alpha=.7,zorder=-1)\n",
     "axs[2].plot(pd.to_datetime(lwc_obs_se['Datetime(dd/mm/yyyy h:mm)']), lwc_obs_se['LWC(gm-3)'], linestyle='', marker='o', markersize=8, color='red', markeredgecolor='k',alpha=.7,zorder=-1)\n",
     "axs[2].set_ylabel('LWC [g m$^{-3}$]')\n",
+    "axs[2].set_xlabel('Time [UTC]')\n",
     "\n",
     "for ax in axs.flatten():\n",
     "    ax.set_xlim(datetime.datetime(2014,1,26), datetime.datetime(2014,2,1))\n",
@@ -474,7 +478,6 @@
     "axs[2].set_xlabel('LWC [g m$^{-3}$]')\n",
     "axs[2].set_yscale('log')\n",
     "axs[2].set_ylim(.1,50)\n",
-    "axs[2].set_xlabel('Time [UTC]')\n",
     "\n",
     "for ax in axs.flatten():\n",
     "    ax.set_ylabel('Normalized ')"
@@ -773,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question 12** Describe the different profiles and explain the cofluctuations between the different variables."
+    "> **Question 12** Describe the different profiles and explain the cofluctuations between the different variables, for the two simulations."
    ]
   },
   {
