--- a/Exercise_4/Exercise_4.ipynb
+++ b/Exercise_4/Exercise_4.ipynb
@@ -776,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Question 12** Describe the different profiles and explain the cofluctuations between the different variables, for the two simulations."
+    "> **Question 12** Describe the different profiles and explain the cofluctuations between the different variables, for the two runs of simulations."
    ]
   },
   {
