Modified instructions to make run on VDI instead of noto

--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -27,31 +27,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preparing Python for the exercise\n",
+    "### Before starting the exercise\n",
     "\n",
-    "You will need to install some Python libraries for executing the code in this exercise.\n",
-    "A notebook has been created for the installation, and it is available at:\n",
+    "The following instructions apply if you are running the exercise on the virtual desktop that was provided (VDI). Please refer to the corresponding PDF for instructions on how to install and run the VDI client.\\\n",
     "\n",
-    "https://noto.epfl.ch/hub/user-redirect/git-pull?repo=https%3A%2F%2Fgithub.com%2Fltelab%2FAtmProc2024&urlpath=lab%2Ftree%2FAtmProc2024%2Finstall_python_environment.ipynb%3Fautodecode&branch=main&depth=1\n",
+    "In order to execute the code in this exercise, you will need to activate the `lte` environment (deployed on VDI).\n",
+    "- If you are running the notebook in Visual Studio Code, select this environment in the Kernel manager (icon at the top right of the code window).\n",
+    "- If you are using jupyterlab, make sure you properly activated the environment before launching jupyter-lab from the terminal:\n",
+    "    - Open a terminal, type `micromamba activate lte`\n",
+    "    - Then launch jupyterlab by typing `jupyter-lab`\n",
     "\n",
-    "Access it and execute the code in it. When you finish the installation, come back to this notebook for completing the exercise."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Activating the kernel\n",
-    "\n",
-    "In the installation notebook, we creatred a virtual environment in which we installed some python libraries. A kernel has been associated to this environment.\n",
-    "You will need to activate this kernel for the current exercise for loading the libraries correctly.\n",
-    "\n",
-    "Click on the \"Switch kernel\" button in the right hand corner of the screen. It is the small text on the left of the circle (\"kernel status\" indicator) and on the right of the bug icon (\"Debugger\" icon).\n",
-    "Once you click on it, a drop-down menu will appear and you will be able to select the kernel we created, called \"AtmProc_Ex2\".\n",
-    "Select \"AtmProc_Ex2\" in the list and click on the \"Select\" button.\n",
-    "\n",
-    "If the \"AtmProc_Ex2\" kernel does not appear in the drop-down menu, interrupt the current kernel (square button in the bar at the top of this tab) and restart it (circular arrow, on the right of the square button).\n",
-    "Then, repeat the procedure to select the \"AtmProc_Ex2\" kernel, and it should appear in the list."
+    "To ensure that your work is properly saved when you logoff your VDI session, make sure that this Exercise notebook is in the `~/Desktop/MyFiles/` directory."
    ]
   },
   {
@@ -61,7 +47,7 @@
     "### General instructions\n",
     "This exercise does not require to code in Python. You will simply have to execute the cells one after the other by pressing Shift + Enter. In some cells, you will have to adjust the values of certain variables, which will be specified clearly (in CAPITAL letters).\n",
     "\n",
-    "The questions will guide you through an interpretation of the radar variables in terms of cloud or precipitation microphysical properties and processes.\n",
+    "The questions will guide you through an interpretation of the radar variables, sounding profiles and model data in terms of cloud or precipitation microphysical properties and processes.\n",
     "More difficult questions are indicated with a star (*).\n"
    ]
   },
