--- a/Exercise_4/Exercise_4.ipynb
+++ b/Exercise_4/Exercise_4.ipynb
@@ -9,9 +9,40 @@
     "\n",
     "## Introduction \n",
     "\n",
-    "In this exercise, you will analyze numerical model simulations and observational data corresponding to snowfall events at Jungfraujoch in January 2014. \n",
+    "In this exercise, you will analyze numerical model simulations and observational data corresponding to snowfall events at Jungfraujoch in January 2014.\n",
+    "The purpose is to handle numerical model data and understand how changes in parameterizations affect model outputs, and how this can help understand the processes that are occuring during a given precipitation event.\n",
+    "\n",
+    "### Downloading the data \n",
     "\n",
     "The data should be downloaded from https://enacshare.epfl.ch/fag54z9PZXwAQ3eRSYkbvutMprdmsTL , unzipped and the \"Data\" folder should be dragged into your \"Exercise_4\" repository."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Before starting the exercise\n",
+    "\n",
+    "The following instructions apply if you are running the exercise on the virtual desktop that was provided (VDI). Please refer to the corresponding PDF for instructions on how to install and run the VDI client.\\\n",
+    "\n",
+    "In order to execute the code in this exercise, you will need to activate the `lte` environment (deployed on VDI).\n",
+    "- If you are running the notebook in Visual Studio Code, select this environment in the Kernel manager (icon at the top right of the code window).\n",
+    "- If you are using jupyterlab, make sure you properly activated the environment before launching jupyter-lab from the terminal:\n",
+    "    - Open a terminal, type `micromamba activate lte`\n",
+    "    - Then launch jupyterlab by typing `jupyter-lab`\n",
+    "\n",
+    "To ensure that your work is properly saved when you logoff your VDI session, make sure that this Exercise notebook is in the `~/Desktop/MyFiles/` directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### General instructions\n",
+    "This exercise does not require to code in Python. You will simply have to execute the cells one after the other by pressing Shift + Enter. In some cells, you will have to adjust the values of certain variables, which will be specified clearly (in CAPITAL letters).\n",
+    "\n",
+    "The questions will guide you through an interpretation of the radar variables, sounding profiles and model data in terms of cloud or precipitation microphysical properties and processes.\n",
+    "More difficult questions are indicated with a star (*).\n"
    ]
   },
   {
