small changes for switch to vdi

--- a/Exercise_2/Exercise_2.ipynb
+++ b/Exercise_2/Exercise_2.ipynb
@@ -485,8 +485,7 @@
     "\n",
     "The next steps of the exercise investigate this hypothesis, by relying on the outputs of a high-resolution numerical model (Weather Research Forecast, WRF) which was run on this event.\n",
     "\n",
-    "**Download the data**: The data could not be shared through moodle directly, so you should download it yourself from the following link: https://enacshare.epfl.ch/for5XVEUYejSiALZ7xt3vzaJ4cTRwQd\\\n",
-    "Then move the file `wrfout_Davis1_v2lessdiff_d03_subselection.nc` inside the Exercise_2/Data/ folder.\n",
+    "This corresponds to the file `wrfout_Davis1_v2lessdiff_d03_subselection.nc` inside the Exercise_2/Data/ folder.\n",
     "\n",
     "Two time steps are available in the data file: 8 January 2019 at 09:00UTC (`TIME_IDX = 0`), and 10 January 2019 at 12:00UTC (`TIME_IDX = 1`). For the main part of the analysis, we use the first time step."
    ]
