Small changes to solutions

--- a/Exercise_4/Exercise_4_solutions.ipynb
+++ b/Exercise_4/Exercise_4_solutions.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "> **Question 2** Discuss the choice of the projection.\n",
     "\n",
-    "*A Lambert conformal projection is adequate for areas with limited distortion, which is the case for midlatitude regions like Central Europe.*"
+    "*A Lambert conformal projection is adequate for areas with limited distortion: this is the case for domains of limited spatial extent in the low- and midlatitude regions.*"
    ]
   },
   {
@@ -336,7 +336,7 @@
     "\n",
     "> **Question 7** Recall what secondary ice production refers to.\n",
     "\n",
-    "*Secondary ice production is the formation of ice crystals through other processes than those of primary ice production, which includes the formation of ice crystals through homogeneous nucleation at very cold temperatues (<-40°C) or heterogeneous nucleation onto ice nucleating particles (INP). Secondary ice production typically takes place as a result of interactions between ice / snow particles that generate new fragments*"
+    "*Secondary ice production is the formation of ice crystals through other processes than those of primary ice production, which includes the formation of ice crystals through homogeneous nucleation at very cold temperatures (<-40°C) or heterogeneous nucleation onto ice nucleating particles (INP). Secondary ice production typically takes place as a result of interactions between ice / snow particles with each other or with supercooled liquid water droplets that generate new fragments.*"
    ]
   },
   {
@@ -749,7 +749,7 @@
    "source": [
     ">**Question 11** Describe and propose interpretations for the differences between these time-height plots and the ones from the control simulations.\n",
     "\n",
-    "*The IWC plot is similar. The LWC plot shows slightly lower LWC values, meaning that the liquid part of the cloud is being more efficiently depleted in this simulation run. The most striking difference is in the ICNC plot: ICNC values are similar in the top part of the cloud, but much higher in the lower part of the cloud. We do not observe a decrease in ICNC as we did in the CNTRL run.*"
+    "*The IWC plot is similar. The LWC plot shows slightly lower LWC values, meaning that the liquid part of the cloud is being more efficiently depleted in this simulation run: this likely corresponds to enhanced riming, as more crystals are able to collide with supercooled liquid water droplets. The most striking difference is in the ICNC plot: ICNC values are similar in the top part of the cloud, but much higher in the lower part of the cloud. We do not observe a decrease in ICNC as we did in the CNTRL run.*"
    ]
   },
   {
