Small changes to solutions

--- a/Exercise_4/Exercise_4_solutions.ipynb
+++ b/Exercise_4/Exercise_4_solutions.ipynb
@@ -649,13 +649,19 @@
    "source": [
     "> **Question 9** Focusing on the profiles of IWC and LWC, describe the cloud structure: is the cloud fully glaciated, is it a mixed phase cloud, or is the composition altitude-dependent (i.e., cloud layers with different properties are present)?\n",
     "\n",
-    "*There are at least two cloud layers with different properties; at the top of the cloud system, the cloud is fully glaciated (no LWC, only IWC); in the lower layers, a mixed phase cloud is present (both LWC and IWC).* \n",
-    "\n",
-    "> **Question 9bis (*)** What is the name of such a configuration? Recall what happens in such cases. Here, what microphysical process do you think this favors?\n",
+    "*There are at least two cloud layers with different properties; at the top of the cloud system, the cloud is fully glaciated (no LWC, only IWC); in the lower layers, a mixed phase cloud is present (both LWC and IWC).* \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> __Question 9bis__ What is the name of such a configuration? Recall what happens in such cases. Here, what microphysical process do you think this favors?\n",
     "\n",
     "*This is a seeder-feeder configuration: ice crystals are precipitating from aloft (seeder) into a liquid/mixed-phase lower-lying cloud (feeder).*\n",
     "\n",
     "> **Question 10** Focus on the profiles of ICNC. What is the general trend in ICNC from the top to bottom of the cloud? What process is likely taking place?\n",
+    "\n",
     "*The general trend is that ICNC increases slightly around the top of the cloud (due to the production of new ice crystals through nucleation), then decreases around ~6 km asl. IWC does not decrease at the same altitude, meaning that the total mass of ice remains approximately the same. This suggest that ice crystals may be aggregating together (leading to a decrease of ICNC, while IWC remains stable).*"
    ]
   },
@@ -814,22 +820,19 @@
     "\n",
     "*In the left plot, we see that collisional breakup is activated around 9km, at first not very strongly; it becomes more relevant around ~7km asl. In the right plot, we see that the ICNC in the BIPS100_PHILL simulation starts to be significantly larger than the CNTRL one around 6-7 km asl, as a result of the increased production of ICNC through BR. It is normal that there is a slight gap in the altitude where the ICNC increase becomes visible compared to the increase in coll.br. because at first the number of ice crystals produced through BR is small compared to the existing ICNC.*\n",
     " \n",
-    " b) Look at the central plot (aggregation tendencies). What do you observe for the two runs? Propose an explanation.\\\n",
+    "> b) Look at the central plot (aggregation tendencies). What do you observe for the two runs? Propose an explanation.\\\n",
+    " \n",
     "*For both runs, the aggregation begins around 9km (aggregation of ice crystals results in a decrease of ICNC, hence the negative values). For the CNTRL run, aggregation becomes less important below 6km asl, while it continues to increase for the BIPS100_PHILL run. We can hypotesize that this is due to the reduced availability of ice crystals in this altitude range in the CNTRL run (fewer ice crystals means aggregation is less likely). Note that in the BIPS100_PHILL simulation, more aggregation takes place and in spite of this, the ICNC remains higher: the production of ice crystals through collisional breakup produces more crystals than the consumption of crystals through aggregation (confirmed if we compare the values in the left and central plots).*\n",
     " \n",
-    " c) Compare the left and central panels: do you observe any cofluctuations? Propose an explanation.\n",
+    "> c) Compare the left and central panels: do you observe any cofluctuations? Propose an explanation.\n",
+    "\n",
     "*In the BIPS100_PHILL run, the tendencies of collisional breakup and aggregation seem almost perfectly anti-correlated, meaning that the processes take place at the same time. This can be explained by the fact that both are collisional processes, i.e., they require the collision between particles (either for the generation of new fragments, or for the clumping together of crystals).*"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "acbr",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -843,7 +846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
